# scurrypy

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
addons/: index.html
addons/addon/: index.html
addons/addon_manager/: index.html
addons/caches/: index.html
addons/component_builder/: index.html
addons/easy_bot/: index.html
addons/embed_builder/: index.html
addons/events/: index.html
addons/interaction/: index.html
addons/prefix/: index.html
api/: index.html
api/addon/: index.html
api/channel/: index.html
api/client/: index.html
api/commands/: index.html
api/component_types/: index.html
api/components/: index.html
api/embed/: index.html
api/image_data/: index.html
api/intents/: index.html
api/message/: index.html
api/models/: index.html
api/permissions/: index.html
api/role/: index.html
api/ui_components/: index.html
discord_evolution/: index.html
doc_notes/: index.html
easy_examples/: index.html
events/: index.html
events/channel/: index.html
events/event_types/: index.html
events/guild/: index.html
events/interaction/: index.html
events/message/: index.html
events/reaction/: index.html
events/ready/: index.html
examples/: index.html
faq/: index.html
getting_started/: index.html
internals/: index.html
logging/: index.html
migrating/: index.html
migrations/: index.html
raw_scurrypy/: index.html
resources/: index.html
roadmap/: index.html
scurrypy/: __init__.py  client.py
search/: search_index.json
(+95 files in other folders)
