[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scurrypy"
version = "0.10.0"

description = "Dataclass-driven Discord API Wrapper in Python"
readme = "README.md"
authors = [{ name = "Furmissile" }]
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.8.0",
  "websockets>=11.0.0",
  "aiofiles>=23.0.0"
]

[tool.setuptools]
packages = [
  "scurrypy",
  "scurrypy.events",
  "scurrypy.resources",
  "scurrypy.parts", 
  "scurrypy.core",
  "scurrypy.models"
]
